ui and backend changes

--- a/task-planner-ui/src/app/done/done.component.html
+++ b/task-planner-ui/src/app/done/done.component.html
@@ -1,5 +1,5 @@
 <section class="card grid grid-cols-1 md:grid-cols-2 gap-4 p-2">
-    <h2>Dono To-Do:</h2>
+    <h2>Finished To-Dos:</h2>
     <div>
         <p>Go Running</p>
         <p>Finish K8s Assignment</p>
